# pod-sdk

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  foundry.toml  src
.github/workflows/: deploy-doc-site.yml  format.yml  lint.yml  release.yml  test.yml
cache/: solidity-files-cache.json
contracts/: Cargo.toml  README.md
contracts/bindings/: Cargo.toml
contracts/bindings/src/: auction.rs  deadline.rs  fasttypes.rs  iconstant.rs  icounter.rs  ideadline.rs  iowned.rs  iset.rs  lib.rs  pi2.rs  profileregistry.rs  rankedfeed.rs  stdconstants.rs  voting.rs
contracts/src/: Auction.sol  Pi2.sol  ProfileRegistry.sol  RankedFeed.sol  Voting.sol  auction.rs  lib.rs  pi2.rs  rankedfeed.rs  rankedfeed.sol  remoteEthCall.sol
contracts/test/: FastTypes.t.sol
doc/: README.md  SUMMARY.md  network-config.md  trading-competition.md  ts-sdk-design.md
doc/api-reference/: README.md  SUMMARY.md  json-rpc-errors.md  market-configurations.md  network-config.md
doc/protocol/: README.md  SUMMARY.md  batch-auctions.md  fungible-tokens.md  margin.md  market-configurations.md  markets-overview.md  native-bridge.md  optimistic-auctions.md  orderbook.md  perpetuals.md
doc/support/: README.md  SUMMARY.md  reset-wallet.md
doc/trading-competition/: README.md  SUMMARY.md
docs/: content.md  faq.md  langs.yml  menu.yaml
docs/coming-from-ethereum/: content.md
docs/devnet/: config.md  content.md  intro.md  precompile.md
docs/examples/: content.md
docs/faq/: content.md
docs/fastpath/: content.md
docs/getting-started/: content.md
docs/json-rpc/: common-fields.md  content.md  eth_estimateGas.md  eth_getLogs.md  eth_networkId.md  eth_subscribe.md  general-rpc-api.md  pod_listConfirmedReceipts.md  pod_listReceipts.md  pod_metrics.md  resources.md  security-considerations.md
docs/overview/: content.md
docs/precompiles/: callWithState.md  content.md  externalCall.md  (+6 more)
examples/: ExternalEthCall.sol  README.md  foundry.toml
examples/auction/: Auction.sol  Cargo.toml  README.md  main.rs
examples/auction/bindings/: Cargo.toml
examples/auction/bindings/src/: auction.rs  bar.rs  barerc1155.rs  barerc721.rs  dummy.rs  fasttypes.rs  hashchallenge.rs  ierc1155.rs  ierc20.rs  ierc4626.rs  ierc6909.rs  ierc6909contenturi.rs  ierc6909metadata.rs  ierc6909tokensupply.rs  ierc721.rs  ierc7540.rs  ierc7540deposit.rs  ierc7540operator.rs  ierc7540redeem.rs  ierc7575.rs  ierc7575share.rs  lib.rs  mockcontractpayable.rs  mockcontractwithconstructorargs.rs  mockusdc.rs  mockusdt.rs  rankedfeed.rs  revertingcontract.rs  usdclike.rs  usdtlike.rs  voting.rs
examples/bridge-flow/: .env.example  Cargo.toml
examples/bridge-flow/src/: main.rs
examples/bsky-plc/: .env.pds  DIDLastOperationRegistry.sol  README.md  deploy.sh  http_server.py  plc-registry.sol  pyproject.toml  server.py
examples/bsky/plc/: Cargo.toml
examples/bsky/plc/src/: bindings.rs  config.rs  lib.rs  main.rs  plc.rs
examples/nfts/: Cargo.toml  NFTs.sol
examples/nfts/src/: main.rs
examples/notary/: Cargo.toml  Makefile  Notary.sol  foundry.toml
examples/notary/bindings/: Cargo.toml
examples/notary/bindings/src/: lib.rs  notary.rs  time.rs
examples/notary/src/: main.rs
examples/optimism-tx-auction/: Cargo.toml  README.md  keys.json  prefund.sh  submit_txs.sh
examples/optimism-tx-auction/contract/: Makefile  foundry.toml
examples/optimism-tx-auction/contract/src/: Auction.sol
examples/optimism-tx-auction/src/: bindings.rs  client.rs  lib.rs  main.rs
examples/optimistic-auction/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  foundry.toml  lib
examples/optimistic-auction/bindings/: Cargo.toml  mod.rs  ownable.rs
examples/optimistic-auction/bindings/src/: absbonding.rs  ecdsa.rs  hashes.rs  lib.rs  merkleproof.rs  merkletree.rs  pod_auction_consumer.rs  podauctionconsumer.rs  podauctionconsumerdeployer.rs  podecdsa.rs  podregistry.rs  stdconstants.rs
examples/optimistic-auction/client/: main.rs
examples/optimistic-auction/contracts/: AbsBonding.sol  PodAuctionConsumer.sol
examples/optimistic-auction/script/: PodAuctionConsumerDeployer.s.sol
examples/optimistic-auction/test/: PodAuctionConsumer.t.sol
examples/rust/: Cargo.toml
examples/rust/src/: podctl.rs  usage.rs  watch_account_receipts.rs  watch_events.rs
examples/solidity/bindings/: Cargo.toml
examples/solidity/bindings/src/: abs_bonding.rs  absbonding.rs  auction.rs  deployer.rs  ecdsa.rs  ethereum_erc20_balance.rs  fast_types.rs  fasttypes.rs  hashes.rs  i_auction.rs  i_pod_registry.rs  icounter.rs  ideadline.rs  iowned.rs  iset.rs  lib.rs  math.rs  merkle_proof.rs  merkle_tree.rs  merkleproof.rs  merkletree.rs  ownable.rs  panic.rs  pi2.rs  pod_ecdsa.rs  pod_registry.rs  profileregistry.rs  quorum_restricted_action.rs  ranked_feed.rs  rankedfeed.rs  recover.rs  safe_cast.rs  signed_math.rs  std_constants.rs  strings.rs  test_mint_balance_precompile.rs  time.rs  voting.rs
protocol/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  foundry.toml  lib
rust-sdk/: Cargo.toml
rust-sdk/src/: lib.rs  main.rs  precompiles.rs  types.rs
rust-sdk/src/auctions/: client.rs
rust-sdk/src/network/: mod.rs
rust-sdk/src/provider/: mod.rs
sdk/: Cargo.toml
sdk/examples/: usage.rs  watch_account_receipts.rs  watch_events.rs
sdk/src/: lib.rs  main.rs
sdk/src/network/: mod.rs
sdk/src/provider/: mod.rs
solidity-sdk/: README.md  foundry.toml
ts-sdk/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  typedoc.json  vitest.config.ts  vitest.workspace.ts
types/: Cargo.toml
types/src/: lib.rs  metadata.rs  pagination.rs  storage.rs  time.rs
types/src/consensus/: attestation.rs  attestation_metadata.rs  certificate.rs  committee.rs  mod.rs  txmetadata.rs
types/src/cryptography/: ecdsa.rs  hash.rs  merkle_tree.rs  mod.rs  sig_hash.rs  signer.rs
types/src/ledger/: calldata.rs  log.rs  mod.rs  receipt.rs  transaction.rs
types/src/rpc/: filter.rs  mod.rs  receipt.rs
(+511 files in other folders)
