[workspace]
members = [
  "examples/solidity/bindings",
  "types",
  "rust-sdk",
  "examples/notary",
  "examples/optimistic-auction",
  "examples/auction",
  "examples/rust",
  "examples/voting/client",
  "examples/nfts",
  "examples/tokens",
  "examples/bsky/plc",
  "examples/optimism-tx-auction",
  "protocol/bindings",
]
resolver = "2"
