[package]
name = "pod-sdk"
version = "0.2.0"
edition = "2021"
description = "Software Development Kit for the pod Network"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://pod.network/"
repository = "https://github.com/podnetwork/pod-sdk"
keywords = ["web3", "sdk", "rust", "dapp", "crypto"]
documentation = "https://docs.rs/pod-sdk"

[lib]
name = "pod_sdk"
path = "src/lib.rs"

[dependencies]
pod-types = { path = "../types", version = "0.2.0" }
pod-contracts = { path = "../examples/solidity/bindings", package = "pod-examples-solidity", version = "0.2.0" }

alloy-primitives = { version = "1.3.0", features = ["k256", "serde"] }
alloy-sol-types = "1.3.1"
alloy-eips = "1.0.35"
alloy-rpc-types = "1.0.34"
alloy-transport = "1.0.35"
alloy-json-rpc = "1.0.35"
alloy-signer = "1.0.35"
alloy-signer-local = "1.0.35"
alloy-network = "1.0.35"
alloy-consensus = "1.0.35"
alloy-provider = { version = "1.0.34", features = ["pubsub", "ws", "reqwest"] }
alloy-pubsub = "1.0.35"

serde = { version = "1.0.226", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1.41"

[dev-dependencies]
tokio-test = "0.4.4"

[package.metadata.cargo-shear]
# tokio-test is used in doctests
ignored = ["tokio-test"]
