[package]
name = "pod-sdk"
version = "0.5.0"
edition = "2021"
description = "Software Development Kit for the pod Network"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://pod.network/"
repository = "https://github.com/podnetwork/pod-sdk"
keywords = ["web3", "sdk", "rust", "dapp", "crypto"]
documentation = "https://docs.rs/pod-sdk"

[lib]
name = "pod_sdk"
path = "src/lib.rs"

[dependencies]
pod-types = { path = "../types", version = "0.5.0" }
pod-contracts = { path = "../examples/solidity/bindings", package = "pod-examples-solidity", version = "0.5.0" }

alloy-primitives = { version = "1.5.7", features = ["k256", "serde"] }
alloy-sol-types = "1.5.7"
alloy-eips = "2.0.4"
alloy-rpc-types = "2.0.4"
alloy-transport = "2.0.4"
alloy-json-rpc = "2.0.4"
alloy-signer = "2.0.4"
alloy-signer-local = "2.0.4"
alloy-network = "2.0.4"
alloy-consensus = "2.0.4"
alloy-provider = { version = "2.0.4", features = ["pubsub", "ws", "reqwest"] }
alloy-pubsub = "2.0.4"

serde = { version = "1.0.226", features = ["derive"] }
hex = "0.4.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1.41"
tokio = "1.47.1"

[dev-dependencies]
tokio-test = "0.4.4"

[package.metadata.cargo-shear]
# tokio-test is used in doctests
ignored = ["tokio-test"]
