[package]
name = "pod-sdk"
version = "0.1.0"
edition = "2024"
description = "Software Development Kit for the pod Network"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://pod.network/"
repository = "https://github.com/podnetwork/pod-sdk"
keywords = ["web3", "sdk", "rust", "dapp", "crypto"]
documentation = "https://docs.rs/pod-sdk"

[lib]
name = "pod_sdk"
path = "src/lib.rs"

[dependencies]
alloy-primitives = { version = "^0.8.15", features = ["k256", "serde"] }
alloy-rpc-types = "0.9.2"
alloy-transport = "0.9.2"
alloy-json-rpc = "0.9.2"
pod-types = { path = "../types" }
pod-contracts = { path = "../contracts/bindings" }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"
alloy-signer = "0.9.2"
alloy-signer-local = "0.9.2"
alloy-sol-types = "0.8.24"
alloy-network = "0.9.2"
futures = "0.3.31"
async-trait = "0.1.86"
alloy-consensus = "0.9.2"
alloy-provider = { version = "0.9.2", features = ["pubsub", "ws"] }
alloy-pubsub = "0.9.2"
thiserror = "2.0.11"

alloy-rpc-types-eth = "0.9.2"

alloy-eips = "0.9.2"
hex = "0.4.3"
anyhow = "1.0.95"
alloy-transport-http = "0.9.2"
