[package]
name = "pod-types"
version = "0.2.0"
edition = "2024"
description = "Types of Software Development Kit for the pod Network"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://pod.network/"
repository = "https://github.com/podnetwork/pod-sdk"
keywords = ["web3", "sdk", "rust", "dapp", "crypto"]
documentation = "https://docs.rs/pod-types"

[lib]
name = "pod_types"
path = "src/lib.rs"

[features]
default = []
arbitrary = [
  "alloy-consensus/arbitrary",
  "alloy-primitives/arbitrary",
  "dep:arbitrary",
]

[package.metadata.cargo-shear]
ignored = [
  "pod-types", # self-depend for tests to enable the arbitrary feature
]

[dependencies]
alloy-consensus = { version = "1.0.24", features = [
  "serde",
  "k256",
  "serde-bincode-compat",
] }
alloy-primitives = { version = "1.3.0", features = ["k256", "serde"] }
alloy-sol-types = "1.3.0"
alloy-signer = "1.0.24"
alloy-signer-local = "1.0.24"
alloy-rpc-types = "1.0.24"
anyhow = "1.0"
bytes = "1.8.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
itertools = "0.13.0"
tokio = { version = "1.43.1", features = ["rt", "macros"] }
base64 = "0.22.1"
utoipa = "5.3.1"
serde_with = "3.12.0"
thiserror = "2.0.12"
tracing = "0.1.41"

arbitrary = { version = "1.4.1", optional = true, features = ["derive"] }

[dev-dependencies]
arbitrary = "1.4.1"
pod-types = { path = ".", features = ["arbitrary"] }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.1"
serde_json = "1.0.140"
