[package]
name = "pod-types"
version = "0.2.0"
edition = "2024"
description = "Types of Software Development Kit for the pod Network"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://pod.network/"
repository = "https://github.com/podnetwork/pod-sdk"
keywords = ["web3", "sdk", "rust", "dapp", "crypto"]
documentation = "https://docs.rs/pod-types"

[lib]
name = "pod_types"
path = "src/lib.rs"

[features]
default = []
arbitrary = [
  "alloy-consensus/arbitrary",
  "alloy-primitives/arbitrary",
  "dep:arbitrary",
]

[package.metadata.cargo-shear]
ignored = [
  "pod-types", # self-depend for tests to enable the arbitrary feature
]

[dependencies]
alloy-consensus = { version = "1.0.36", features = [
  "serde",
  "k256",
  "serde-bincode-compat",
] }
alloy-primitives = { version = "1.3.1", features = ["k256", "serde"] }
alloy-sol-types = "1.3.1"
alloy-signer = "1.0.36"
alloy-signer-local = "1.0.36"
alloy-rpc-types = "1.0.36"
anyhow = "1.0.100"
bytes = "1.10.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
base64 = "0.22.1"
utoipa = "5.4.0"
serde_with = "3.14.1"
thiserror = "2.0.16"
tracing = "0.1.41"

arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }

[dev-dependencies]
arbitrary = "1.4.2"
pod-types = { path = ".", features = ["arbitrary"] }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.2"
serde_json = "1.0.145"
