[package]
name = "pod-types"
version = "0.5.0"
edition = "2024"
description = "Types of Software Development Kit for the pod Network"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://pod.network/"
repository = "https://github.com/podnetwork/pod-sdk"
keywords = ["web3", "sdk", "rust", "dapp", "crypto"]
documentation = "https://docs.rs/pod-types"

[lib]
name = "pod_types"
path = "src/lib.rs"

[features]
default = []
arbitrary = [
  "alloy-consensus/arbitrary",
  "alloy-primitives/arbitrary",
  "dep:arbitrary",
]

[package.metadata.cargo-shear]
ignored = [
  "pod-types", # self-depend for tests to enable the arbitrary feature
]

[dependencies]
alloy-consensus = { version = "1.2.1", features = [
  "serde",
  "k256",
  "serde-bincode-compat",
] }
alloy-network = "1.2.1"
alloy-primitives = { version = "1.5.2", features = ["k256", "serde"] }
alloy-sol-types = "1.5.2"
alloy-signer = "1.2.1"
alloy-signer-local = "1.2.1"
alloy-rpc-types = "1.2.1"
anyhow = "1.0.100"
bytes = "1.11.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
base64 = "0.22.1"
utoipa = "5.4.0"
serde_with = "3.14.1"
thiserror = "2.0.16"
tracing = "0.1.41"
secp256k1 = { workspace = true, features = ["recovery", "serde"] }

arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }

[dev-dependencies]
arbitrary = "1.4.2"
pod-types = { path = ".", features = ["arbitrary"] }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.2"
serde_json = "1.0.145"
