[package]
name = "pod-contracts"
version = "0.1.0"
edition = "2024"
description = "Types of Software Development Kit for the pod Network"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://pod.network/"
repository = "https://github.com/podnetwork/pod-sdk"
keywords = ["web3", "sdk", "rust", "dapp", "crypto"]
documentation = "https://docs.rs/pod-contracts"

[dependencies]
alloy = { version = "0.9.2", features = ["sol-types", "contract"] }