[package]
name = "auction"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "auction"
path = "main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
pod-sdk = { path = "../../sdk" }
auction-contracts = { path = "./bindings" }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
alloy-network = { version = "0.9.2" }