[package]
name = "bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-sdk = { git = "https://github.com/podnetwork/pod-sdk.git", rev = "7cd15a0c5436182f3ce6f4115d69f2bd257dd8e3" }
pod-types = { git = "https://github.com/podnetwork/pod-sdk.git", rev = "7cd15a0c5436182f3ce6f4115d69f2bd257dd8e3" }
alloy-network = "1.0.24"
alloy-primitives = { version = "1.3.0", features = [
    "k256",
    "serde",
    "getrandom",
] }
alloy-contract = "1.0.24"
alloy-provider = { version = "1.0.24", features = ["pubsub", "ws"] }
alloy-signer-local = "1.0.24"
alloy-sol-types = "1.3.0"
pod-protocol = { git = "https://github.com/podnetwork/pod-sdk.git", rev = "12abcb9b359dea94825a6d78fefa439e8857263d" }
anyhow = "1.0.100"
tokio = { version = "1.43.1", features = ["full", "tracing"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
