[package]
name = "bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-protocol = { git = "https://github.com/podnetwork/pod-sdk.git", rev = "535a38bbe4a78955546d673e1cadff7caa3201af" }
pod-sdk = { git = "https://github.com/podnetwork/pod-sdk.git", rev = "535a38bbe4a78955546d673e1cadff7caa3201af" }
alloy-network = "1.2.1"
alloy-primitives = { version = "1.5.2", features = [
    "k256",
    "serde",
    "getrandom",
] }
alloy-contract = "1.2.1"
alloy-provider = { version = "1.2.1", features = ["pubsub", "ws"] }
alloy-signer-local = "1.2.1"
alloy-sol-types = "1.5.2"
anyhow = "1.0.100"
tokio = { version = "1.43.1", features = ["full", "tracing"] }
clap = { version = "4.5.40", features = ["derive", "env"] }

[package.metadata.cargo-shear]
# alloy-contract is needed by the `sol!` macro, but `cargo-shear` is confused and removes it.
ignored = ["alloy-contract"]
