[package]
name = "bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-protocol = { path = "../../protocol/bindings" }
pod-sdk = { path = "../../rust-sdk" }
alloy-network = "2.0.4"
alloy-primitives = { version = "1.5.7", features = [
    "k256",
    "serde",
    "getrandom",
] }
alloy-contract = "2.0.4"
alloy-provider = { version = "2.0.4", features = ["pubsub", "ws"] }
alloy-signer-local = "2.0.4"
alloy-sol-types = "1.5.7"
anyhow = "1.0.100"
tokio = { version = "1.43.1", features = ["full", "tracing"] }
clap = { version = "4.5.40", features = ["derive", "env"] }

[package.metadata.cargo-shear]
# alloy-contract is needed by the `sol!` macro, but `cargo-shear` is confused and removes it.
ignored = ["alloy-contract"]
