[project]
name = "bsky-plc"
version = "0.1.0"
description = ""
authors = [{ name = "Bartosz Różański", email = "bartosz@pod.network" }]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "web3 (>=7.10.0,<8.0.0)",
    "eth-account (>=0.13.7,<0.14.0)",
    "base58 (>=2.1.1,<3.0.0)",
    "cbor2 (>=5.6.5,<6.0.0)",
    "multiformats (>=0.3.1.post4,<0.4.0)",
    "dag-cbor (>=0.3.3,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
