[package]
name = "nfts"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-sdk = { path = "../../rust-sdk" }
pod-types = { path = "../../types" }

alloy = { version = "1.0.36", features = ["sol-types", "contract"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
futures = "0.3.31"
