[package]
name = "notary"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-sdk = { path = "../../rust-sdk" }
pod-types = { path = "../../types" }
notary-bindings = { path = "./bindings" }

alloy = { version = "1.0.24", features = ["sol-types", "contract"] }
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
hex = "0.4.3"
humantime = "2.2.0"
futures = "0.3.31"
