[package]
name = "notary"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-sdk = { path = "../../rust-sdk" }
pod-types = { path = "../../types" }
notary-bindings = { path = "./bindings" }

alloy = { version = "1.2.1", features = ["sol-types", "contract"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
humantime = "2.3.0"
futures = "0.3.31"
