[package]
name = "optimism-tx-auction"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-sdk = { path = "../../rust-sdk" }
pod-types = { path = "../../types" }

alloy = { version = "1.0.9", features = ["sol-types", "contract"] }
op-alloy = { version = "0.17.2", features = ["full"] }
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
rand = "0.9.1"
humantime = "2.2.0"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.141"
