[package]
name = "optimism-tx-auction"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-sdk = { path = "../../rust-sdk" }

alloy = { version = "1.0.36", features = ["sol-types", "contract"] }
op-alloy = { version = "0.20.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
rand = "0.9.2"
humantime = "2.3.0"
futures = "0.3.31"
serde_json = "1.0.145"
