[package]
name = "optimistic-auction"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "optimistic_auction"
path = "client/main.rs"

[dependencies]
alloy-network = "0.12.1"
alloy-sol-types = "0.8.24"
alloy-primitives = { version = "^0.8.22", features = ["k256", "serde"] }
alloy-signer-local = "0.12.1"
alloy-provider = { version = "0.12.1", features = ["pubsub", "ws"] }
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.44.2", features = ["full"] }
pod-types = { path = "../../types" }
pod-sdk = { path = "../../rust-sdk" }
pod-examples-solidity = { path = "../solidity/bindings" }
pod-optimistic-auction = { path = "./bindings" }
