[package]
name = "bsky-plc"
version = "0.1.0"
edition = "2024"

[dependencies]
pod-sdk = { path = "../../../rust-sdk" }

alloy = { version = "1.0.24", features = ["sol-types", "contract"] }
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
hex = "0.4.3"
axum = { version = "0.8.4", features = ["tracing", "macros"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["trace"] }
bs58 = "0.5.1"
serde_ipld_dagcbor = "0.6.3"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
cid = "0.11.1"
base32 = "0.5.1"
