[package]
name = "pod-examples-solidity"
version = "0.4.0"
edition = "2021"
description = "Bindings for pod Solidity contracts examples"
license = "MIT OR Apache-2.0"

[dependencies]
alloy = { version = "1.0.36", features = ["sol-types", "contract"] }
serde = { version = "1.0", features = ["derive"] }