[package]
name = "pod-examples-solidity"
version = "0.5.0"
edition = "2021"
description = "Bindings for pod Solidity contracts examples"
license = "MIT OR Apache-2.0"

[dependencies]
alloy = { version = "2.0.4", features = ["sol-types", "contract"] }
serde = { version = "1.0", features = ["derive"] }